# ollama_gui

./: .gitignore  LICENSE  README.md  Run Ollama GUI.lnk  pyproject.toml  requirements.txt  run_ollama_gui.bat
ollama_gui/: __init__.py  app.py
ollama_gui/models/: data_models.py
ollama_gui/services/: model_manager.py  ollama_client.py  status_monitor.py
ollama_gui/utils/: config.py  formatting.py  threading_utils.py
ollama_gui/views/: chat_view.py  dashboard_view.py  model_detail_view.py  models_view.py  pull_dialog.py  running_view.py  settings_view.py
ollama_gui/views/components/: __init__.py  confirmation_dialog.py  model_card.py  progress_bar.py  sidebar.py  status_badge.py
