[build-system]
requires = ["setuptools >= 68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ollama-gui"
version = "1.0.0"
description = "A clean, modern desktop GUI for managing local Ollama models"
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "MIT"}
dependencies = [
    "customtkinter >= 5.2",
    "requests >= 2.31",
    "Pillow >= 10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[project.scripts]
ollama-gui = "ollama_gui.app:main"
